# second-brain

./: .gitignore  DESIGN.md  NOTES.md  README.md  demo_script.txt  pyproject.toml
data/notes/: 01KED2DTA04HQ062406FV4PCMD--speculative-decoding-mechanism-and-why-it-speeds-inference-f.md  01KED2DTA04HQ062406FV4PCME--current-unknowns-and-a-gut-acceptance-rate-guess-for-k-4-on.md  01KED2DTA04HQ062406FV4PCMF--experimental-matrix-draft-sizes-k-values-and-primary-metrics.md  01KED2DTA04HQ062406FV4PCMG--sla-driven-decision-prioritize-p95-latency-and-threshold-tar.md  01KED2DTA04HQ062406FV4PCMH--conservative-rollout-plan-for-k-values-and-decision-threshol.md  01KED2DTA04HQ062406FV4PCMJ--instrumentation-additions-to-capture-rollbacks-memory-and-qu.md  01KED2DTA04HQ062406FV4PCMK--execution-schedule-sample-sizes-cost-assumptions-and-quick-s.md  01KEMSKZA0BRFY46VVJC26D4HZ--cairn-project-overview-mvp-scope-timeline-role-and-budget.md  01KEMSKZA0N5GQ95PF8S94CBXV--tech-stack-and-infrastructure-choices-for-mvp.md  01KEMSKZA0N5GQ95PF8S94CBXW--gpx-import-and-parsing-rules-file-handling-sampling-edge-cas.md  01KEMSKZA0N5GQ95PF8S94CBXX--elevation-gradient-calculation-and-outlier-handling.md  01KEMSKZA0N5GQ95PF8S94CBXY--difficulty-scoring-design-deterministic-formula-weights-and.md  01KEMSKZA0N5GQ95PF8S94CBXZ--normalization-functions-and-numeric-thresholds-distance-asce.md  (+447 more)
evals/: planted.md
tests/: test_ask.py  test_contracts.py  test_index.py  test_ingestion.py  test_llm_adapters.py  test_orchestration.py  test_seed.py  test_session.py  test_stores.py  test_voice.py
(+141 files in other folders)
