[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AymenEc", email = "91324849+AymenE19@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-frontmatter>=1.3.0",
    "python-ulid>=3.1.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlite-vec>=0.1.9",
    "typer>=0.27.0",
]

[project.scripts]
sb = "second_brain.presentation.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true
